--- a/app/src/main/res/layout/chatbox_item.xml
+++ b/app/src/main/res/layout/chatbox_item.xml
@@ -47,8 +47,17 @@
                 android:textColor="@color/white"
                 android:gravity="center_vertical"
                 android:layout_marginStart="20dp"
-                android:layout_width="match_parent"
+                android:layout_marginEnd="40dp"
+                android:layout_width="170dp"
                 android:layout_height="?actionBarSize"/>
+        <ImageView
+                android:visibility="gone"
+                android:layout_width="40dp"
+                android:layout_height="?actionBarSize"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:id="@+id/badge"
+               />
     </LinearLayout>
 
 
